--- a/ChromiumBrowser.csproj
+++ b/ChromiumBrowser.csproj
@@ -146,6 +146,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="chromiumbrowser_94289.ico" />
+    <None Include="Resources\Bg2.jpg" />
+    <None Include="Resources\Bg1.jpg" />
     <None Include="Resources\11456891461558965378-128.png" />
     <None Include="Resources\19580304091552644365-128.png" />
     <None Include="Resources\chromiumbrowser_94289.ico" />
